<?xml version="1.0" encoding="UTF-8"?>
<project>
   <modelVersion>4.0.0</modelVersion>
   <groupId>mkr</groupId>
   <artifactId>util-pom</artifactId>
   <name>mkr util pom</name>
   <version>3.0-SNAPSHOT</version><!--util.version-->
   <packaging>pom</packaging>

   <modules>
      <module>base</module>
      <module>crawler</module>
      <module>xml</module>
      <module>svm</module>
      <module>http</module>
      <module>ssh</module>
      <module>spring</module>
      <module>usagetracking</module>
      <module>xslt</module>

      <!-- TODO: fix issues, re-enable
         <module>swt</module>
         <module>dumpass</module>
       -->
   </modules>

   <properties>
      <spring.version>6.0.19</spring.version>
      <dump.version>2.0-49c4a92d12f027c53b78981c7f3886587ec79a65</dump.version>
   </properties>

   <scm>
      <developerConnection>scm:git:file:.</developerConnection>
   </scm>

   <build>
      <sourceDirectory>${basedir}/src</sourceDirectory>
      <testSourceDirectory>${basedir}/test</testSourceDirectory>
      <resources>
         <resource>
            <directory>${basedir}/src</directory>
            <includes>
               <include>**/*.gif</include>
               <include>**/*.png</include>
               <include>**/*.bmp</include>
               <include>**/*.properties</include>
            </includes>
         </resource>
      </resources>
      <plugins>
         <plugin>
            <artifactId>maven-compiler-plugin</artifactId>
            <version>3.14.1</version>
            <configuration>
               <encoding>UTF-8</encoding>
               <source>11</source>
               <target>11</target>
            </configuration>
         </plugin>
         <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-dependency-plugin</artifactId>
            <version>3.9.0</version>
            <executions>
               <execution>
                  <id>copy-dependencies</id>
                  <phase>package</phase>
                  <goals>
                     <goal>copy-dependencies</goal>
                  </goals>
                  <configuration>
                     <outputDirectory>${basedir}/target/lib</outputDirectory>
                  </configuration>
               </execution>
            </executions>
         </plugin>
         <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-source-plugin</artifactId>
            <version>3.4.0</version>
            <executions>
               <execution>
                  <goals>
                     <goal>jar</goal>
                  </goals>
               </execution>
            </executions>
         </plugin>
         <plugin>
            <artifactId>maven-surefire-plugin</artifactId>
            <version>3.5.4</version>
            <configuration>
               <excludes>
               </excludes>
               <argLine>
                  --add-opens java.base/java.lang=ALL-UNNAMED
               </argLine>
            </configuration>

         </plugin>
      </plugins>
   </build>

   <dependencies>
      <dependency>
         <groupId>org.slf4j</groupId>
         <artifactId>slf4j-api</artifactId>
         <version>2.0.14</version>
      </dependency>

      <!-- for testing -->
      <dependency>
         <groupId>org.slf4j</groupId>
         <artifactId>slf4j-log4j12</artifactId>
         <version>2.0.14</version>
         <scope>test</scope>
      </dependency>

      <dependency>
         <groupId>junit</groupId>
         <artifactId>junit</artifactId>
         <version>4.13.2</version>
         <scope>test</scope>
      </dependency>

      <dependency>
         <groupId>org.assertj</groupId>
         <artifactId>assertj-core</artifactId>
         <version>3.26.3</version>
         <scope>test</scope>
      </dependency>

   </dependencies>

   <dependencyManagement>
      <dependencies>
         <dependency>
            <groupId>mkr</groupId>
            <artifactId>util-base</artifactId>
            <version>${project.version}</version>
         </dependency>
         <dependency>
            <groupId>mkr</groupId>
            <artifactId>util-crawler</artifactId>
            <version>${project.version}</version>
         </dependency>
         <dependency>
            <groupId>mkr</groupId>
            <artifactId>util-swt</artifactId>
            <version>${project.version}</version>
         </dependency>
         <dependency>
            <groupId>mkr</groupId>
            <artifactId>util-xml</artifactId>
            <version>${project.version}</version>
         </dependency>
         <dependency>
            <groupId>mkr</groupId>
            <artifactId>util-dump</artifactId>
            <version>${dump.version}</version>
         </dependency>
         <dependency>
            <groupId>mkr</groupId>
            <artifactId>util-dumpsearch</artifactId>
            <version>${dump.version}</version>
         </dependency>
         <dependency>
            <groupId>mkr</groupId>
            <artifactId>util-http</artifactId>
            <version>${project.version}</version>
         </dependency>
         <dependency>
            <groupId>mkr</groupId>
            <artifactId>util-ssh</artifactId>
            <version>${project.version}</version>
         </dependency>
         <dependency>
            <groupId>mkr</groupId>
            <artifactId>util-spring</artifactId>
            <version>${project.version}</version>
         </dependency>
         <dependency>
            <groupId>mkr</groupId>
            <artifactId>util-usagetracking</artifactId>
            <version>${project.version}</version>
         </dependency>
         <dependency>
            <groupId>mkr</groupId>
            <artifactId>util-xslt</artifactId>
            <version>${project.version}</version>
         </dependency>

         <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-core</artifactId>
            <version>${spring.version}</version>
         </dependency>
         <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-context</artifactId>
            <version>${spring.version}</version>
         </dependency>
         <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-context-support</artifactId>
            <version>${spring.version}</version>
         </dependency>
         <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-web</artifactId>
            <version>${spring.version}</version>
         </dependency>
         <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-orm</artifactId>
            <version>${spring.version}</version>
         </dependency>
         <dependency>
            <groupId>commons-io</groupId>
            <artifactId>commons-io</artifactId>
            <version>2.17.0</version>
         </dependency>
         <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-lang3</artifactId>
            <version>3.17.0</version>
         </dependency>
      </dependencies>
   </dependencyManagement>

   <repositories>
   </repositories>

   <distributionManagement>
      <repository>
         <id>artifactory</id>
         <name>artifactory releases</name>
         <url>http://artifactory.chrono24.net:8081/artifactory/libs-releases-local</url>
      </repository>
      <snapshotRepository>
         <id>artifactory</id>
         <name>artifactory snapshots</name>
         <url>http://artifactory.chrono24.net:8081/artifactory/libs-snapshots-local</url>
      </snapshotRepository>
   </distributionManagement>

</project>
